syntax = 'proto3';

package api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/api/resource/generated.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Job {
    string Id = 1;
    string JobSetId = 2;
    string Queue = 3;
    double Priority = 4;
    k8s.io.api.core.v1.PodSpec PodSpec = 5;
    google.protobuf.Timestamp Created = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message LeaseRequest {
    string ClusterID = 1;
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> Resources = 2 [(gogoproto.nullable) = false];
}

message JobLease {
    repeated Job Job = 1;
}

message IdList {
    repeated string Ids = 1;
}

service AggregatedQueue {
    rpc LeaseJobs (LeaseRequest) returns (JobLease);
    rpc RenewLease (IdList) returns (google.protobuf.Empty);
    rpc ReportDone (IdList) returns (google.protobuf.Empty);
}
